--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.5",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
